<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:layout_margin="24dp"
    android:background="@drawable/background_dialog"
    android:paddingBottom="4dp">
    <com.google.android.material.textview.MaterialTextView
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/TextBold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        tools:ignore="RtlSymmetry" />
    <com.google.android.material.textview.MaterialTextView
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:id="@+id/message"
        style="@style/TextBold"
        android:fontFamily="@font/nunito_sans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:gravity="center"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/line_login" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:layout_weight=".5"
            android:textSize="16sp"
            android:textColor="@color/primary_color"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>