<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:paddingTop="36dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_launcher" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/LoginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textSize="26sp" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <!-- end edit -->
                <com.google.android.material.textview.MaterialTextView
                    style="@style/LoginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginFieldTil"
                    style="@style/Vector.TextInputLayout.Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="false"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/ic_user_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginField"
                        style="@style/CommonTextInputLogin"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:hint="@string/user_name"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColorHint="@color/primary_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordFieldTil"
                        style="@style/Vector.TextInputLayout.Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null"
                        app:endIconMode="password_toggle"
                        app:hintEnabled="false"
                        app:startIconDrawable="@drawable/ic_passwrod">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordField"
                            style="@style/CommonTextInputLogin"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingEnd="48dp"
                            tools:ignore="RtlSymmetry" />

                    </com.google.android.material.textfield.TextInputLayout>

<!--                    <com.globits.mita.utils.RevealPasswordImageView-->
<!--                        android:id="@+id/passwordReveal"-->
<!--                        android:layout_width="56dp"-->
<!--                        android:layout_height="56sp"-->
<!--                        android:layout_gravity="end"-->
<!--                        android:background="?attr/selectableItemBackground"-->
<!--                        android:scaleType="center"-->
<!--                        app:tint="@color/primary_color" />-->
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/forgetPasswordButton"
                            style="@style/LoginLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|end"
                            android:text="@string/auth_forgot_password"
                            android:textFontWeight="400" />
                    </LinearLayout>

                    <androidx.legacy.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginSubmit"
                        style="@style/Style.Vector.Login.Button"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/primary_color"
                        android:text="@string/auth_login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        app:cornerRadius="10dp"
                        tools:ignore="RelativeOverlap" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/LoginLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/no_account"
                        android:textFontWeight="400"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <!--                    <androidx.appcompat.widget.AppCompatTextView-->
                        <!--                        style="@style/CommonTextNewAccount"-->
                        <!--                        android:layout_width="wrap_content"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        android:text="@string/login_not_have_account"-->
                        <!--                        android:textColor="@color/eclinica_text_color"-->
                        <!--                        android:textSize="16sp" />-->

                        <!--                    <androidx.appcompat.widget.AppCompatTextView-->
                        <!--                        android:id="@+id/loginNotice"-->
                        <!--                        style="@style/CommonTextNewAccount"-->
                        <!--                        android:layout_width="wrap_content"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        android:layout_marginStart="6dp"-->
                        <!--                        android:text="@string/login_subtitle"-->
                        <!--                        android:textColor="@color/riot_green_eclinica" />-->

                    </LinearLayout>

                    <androidx.legacy.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="48dp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginPrivacy"
                    style="@style/LoginLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center|bottom"
                    android:text="@string/help_by_us" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
